# AI-Customer-Support-Agent-

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: loop.py  prompts.py  runner.py  tools.py  tracing.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routes/: admin.py  auth.py  chat.py  orders.py  voice.py
backend/app/cases/: service.py
backend/app/db/: database.py  models.py  seed.py
backend/app/events/: bus.py
backend/app/llm/: client.py  openai_client.py
backend/app/orders/: service.py
backend/app/policy/: engine.py  policy.md  policy_config.json
backend/app/refunds/: service.py
backend/app/voice/: __init__.py  agent_bridge.py  client.py  deepgram_client.py  elevenlabs_client.py  live.py
backend/tests/: conftest.py  test_agent_loop.py  test_api.py  test_refund_service.py  test_tools.py
backend/tests/evals/: README.md  harness.py  scenarios.py  test_evals_live.py  test_evals_offline.py  test_evals_scored.py
backend/tests/integration/: test_api.py  test_runner_escalation.py  test_voice_bridge.py
backend/tests/unit/: test_policy_engine.py  test_refund_service.py  test_tracing.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BackButton.tsx  icons.tsx
frontend/src/components/admin/: SummaryCard.tsx
frontend/src/components/chat/: ChatPanel.tsx  ChatStarter.tsx  Composer.tsx  MessageBubble.tsx  OrderCard.tsx  (+2 more)
frontend/src/hooks/: useSSE.ts  useVoice.ts  useVoiceRecorder.ts
frontend/src/lib/: adminTrace.ts  session.tsx
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  HomePage.tsx  LoginPage.tsx  OrdersPage.tsx  VoicePage.tsx
frontend/src/styles/: admin.css  chat.css  global.css  home.css  login.css  orders.css  tokens.css  voice.css
frontend/src/types/: chat.ts  index.ts
